Visual fixes
- Fixed too tall charts
- Fixed zoomed in achievements truncated

--- a/imports/ui/pages/rank.scss
+++ b/imports/ui/pages/rank.scss
@@ -43,4 +43,9 @@
 	height: 90vh;
 	width: 90vw;
 	max-width: 100%;
+	max-height: 425px;
+
+	@include horizontal-breakpoint(mobile) {
+		max-height: 100%;
+	}
 }
