--- a/imports/ui/views/achievements.scss
+++ b/imports/ui/views/achievements.scss
@@ -120,6 +120,7 @@ $gold-color: #eadc5e;
 	display: flex;
 	align-items: center;
 	margin-bottom: 10px;
+	padding: 0 10px;
 }
 
 .small-star {
